# python-challenge

./: .gitignore  .pydocstyle.ini  README.md  handler.py  pyproject.toml
resources/: borrowers.json  residences.json
service/: dal.py  models.py
tests/: loandata.json  reports.json  test_reporting.py
