[tool.poetry]
name = "interviews.challenges"
version = "0.1.0"
description = ""
authors = ["Shparki <matt.murray@pnmac.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
pytest = "^6.2.2"
pydocstyle = "^5.1.1"
black = "^20.8b1"
coverage = "^5.5"

# Tooling config
[tool.pytest.ini_options]
addopts = "-v"
testpaths=[
    "tests"
]
log_cli = true
log_cli_level = "INFO"
log_file = "logs/pytest-output.txt"
log_file_level = "DEBUG"
markers = []

[tool.coverage.run]
source = ["service"]
command_line = '-m pytest tests'
dynamic_context = "test_function"

[tool.coverage.html]
show_contexts = true
directory = '.coverage/html'

[tool.pylint.master]
ignore=["tests"]
disable=["R0902", "R0903", "C0302", "W0105", "C0103", "R0913"]

# Build config
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
